<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jjba"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/divide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="-300dp"
        android:background="@drawable/round_button"
        android:text="@string/slash"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cross"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="-300dp"
        android:background="@drawable/round_button"
        android:text="@string/x"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="-300dp"
        android:background="@drawable/round_button"
        android:text="@string/minussym"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/braces"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/round_button"
        android:text="@string/brace"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ac"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="300dp"
        android:background="@drawable/round_button"
        android:text="@string/ac"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/round_button"
        android:text="@string/dotsym"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <Button
        android:id="@+id/mod"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/round_button"
        android:text="@string/modulus"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equalto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="-300dp"
        android:background="@drawable/round_button"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textColor="#00FF0A"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="-300dp"
        android:background="@drawable/round_button"
        android:text="@string/plussym"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nine" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/two" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/one" />

    <ImageView
        android:id="@+id/image6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/six" />

    <ImageView
        android:id="@+id/image0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zero" />

    <ImageView
        android:id="@+id/image5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/five" />

    <ImageView
        android:id="@+id/image4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/four" />

    <ImageView
        android:id="@+id/image7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seven" />

    <ImageView
        android:id="@+id/image8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eight" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/three" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/round_button"
        android:text="@string/backspacesym"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginBottom="500dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="370dp"
        android:layout_height="140dp"
        android:layout_marginBottom="500dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>